--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Lista dei post</h2>
+    <ul></ul>
 
-
-    <script src="./app.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
